--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<h1>早上好</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>女人不容易</title>
+	
+	<style type="text/css">
+		a{
+			text-decoration:none;
+
+		}
+
+		.imgClass{
+			border-style: solid; 
+			border-width: 2px;
+			width:300px;
+		}
+
+	</style>
+
+</head>
+<body>
+	<center>
+		<h1>女人不容易</h1>
+
+		<h2>一、女人的一生</h2>
+		<div class="imgClass">
+			<img src="img/yisheng.gif"/><br><br>
+		</div><br><br>
+
+		<h2>二、女人分娩的过程</h2>
+		<video src="女人生小孩.mp4" controls="controls">
+			您的浏览器不支持 video 标签。
+		</video><br><br>
+
+
+
+		<a href='doc/女人不容易 男人要珍惜.docx'>女人不容易 男人要珍惜.docx</a><br><br>
+		<a href='doc/女人不容易 请疼爱自已的妻子.docx'>女人不容易 请疼爱自已的妻子.docx</a><br><br>
+		<a href='doc/女人不容易，男人应该体谅女人.docx'>女人不容易，男人应该体谅女人.docx</a><br><br>
+		<a href='doc/女人不容易，请珍惜，别让他哭.docx'>女人不容易，请珍惜，别让他哭.docx</a><br><br>
+		<a href='doc/女人不容易，谁知女人心？.docx'>女人不容易，谁知女人心？.docx</a><br><br>
+		<a href='doc/女人生孩子有多痛？看完整个人震惊了.docx'>女人生孩子有多痛？看完整个人震惊了.docx</a><br><br>
+		<a href='doc/女人的一生不容易！（男人必读）.docx'>女人的一生不容易！（男人必读）.docx</a><br><br>
+		<a href='doc/都说女人不容易，可是.docx'>都说女人不容易，可是.docx</a><br><br>
+		<a href='doc/顶撞麻麻.docx'>顶撞麻麻.docx</a><br><br>
+
+	</center>
+</body>
+</html>
