--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 			width:300px;
 		}
 
+		.imgClass1{
+			border-style: solid; 
+			border-width: 2px;
+			width:450px;
+		}
+
 	</style>
 
 </head>
@@ -45,6 +51,12 @@
 		<a href='doc/都说女人不容易，可是.docx'>都说女人不容易，可是.docx</a><br><br>
 		<a href='doc/顶撞麻麻.docx'>顶撞麻麻.docx</a><br><br>
 
+		<h1 style="color:red">总结</h1>
+		<h3>
+			<div class="imgClass1">
+			<img src="img/10w.jpg"/><br><br>
+		</div><br><br>
+		</h3>
 	</center>
 </body>
 </html>
