--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 			<img src="img/yisheng.gif"/><br><br>
 		</div><br><br>
 
-		<h2>二、女人分娩的过程</h2>
+		<h2>二、女人分娩的过程(视频)</h2>
 		<video src="女人生小孩.mp4" controls="controls">
 			您的浏览器不支持 video 标签。
 		</video><br><br>
 
+		<h2>二、女人分娩的过程（图片）</h2>
+			<a href='get.html'>内容可能引起不适，如不喜欢，alt + F4 可以关闭</a><br><br>
 
 		<h2>三、相关文章</h2>
 		<a href='doc/女人不容易 男人要珍惜.docx'>女人不容易 男人要珍惜.docx</a><br><br>
