--- a/get.html
+++ b/get.html
@@ -19,6 +19,10 @@
 			 <img src="img/get/0 (4).jpg"><br> 
 			 <img src="img/get/0 (5).jpg"><br> 
 			 <img src="img/get/0 (6).jpg"><br>  
+
+
+			<h1 style="color:red">关注公号，每天可免费收到相关文章</h1>
+			<img src="img/qrcode.jpg"/><br><br>
 	</center>
 </body>
 </html>
