--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</video><br><br>
 
 		<h2>二、女人分娩的过程（图片）</h2>
-			<a href='get.html'>内容可能引起不适，如不喜欢，alt + F4 可以关闭</a><br><br>
+			<a href='get.html'>内容可能引起不适，如不喜欢，请立即关闭，以免受到惊吓。</a><br><br>
 
 		<h2>三、相关文章</h2>
 		<a href='doc/女人不容易 男人要珍惜.docx'>女人不容易 男人要珍惜.docx</a><br><br>
@@ -61,6 +61,9 @@
 			<img src="img/10w.jpg"/><br><br>
 		</div><br><br>
 		</h3>
+
+		<h1 style="color:red">关注公号，每天可免费收到相关文章</h1>
+		<img src="img/qrcode.jpg"/><br><br>
 	</center>
 </body>
 </html>
